--- a/missing.html
+++ b/missing.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Disaster Helpline</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
@@ -19,11 +19,11 @@
             <h3>Disaster Helpline</h3>
         </div>
         <div id="cli" style="
-            display: flex;
-            justify-content: space-between;
-            width: 40%;
-            padding-right: 5%;
-            ">
+          display: flex;
+          justify-content: space-between;
+          width: 40%;
+          padding-right: 5%;
+        ">
             <div class="navi" style="display: flex">
                 <i class="fa-solid fa-house"></i>
                 <a href="/index.html">
@@ -32,17 +32,17 @@
             </div>
             <div class="navi" style="display: flex">
                 <i class="fa-solid fa-handshake-angle"></i
-            ><a href="/helpline.html"><h4>Helpline</h4></a>
-            </div>
-            <div class="navi" style="display: flex">
-            <i class="fa-solid fa-phone"></i>
+          ><a href="/helpline.html"><h4>Helpline</h4></a>
+        </div>
+        <div class="navi" style="display: flex">
+          <i class="fa-solid fa-phone"></i>
                 <a href="/contact us.html">
                     <h4>Contact Us</h4>
                 </a>
 
             </div>
             <div class="navi" style="display: flex">
-                <a href="/about.html">
+                <a href="">
                     <h4>About Us</h4>
                 </a>
             </div>
@@ -56,39 +56,20 @@
 
     <div style="display: flex; flex: 1; flex-direction: row; margin-top: 0px">
         <div id="sidemain" style="display: flex; flex-direction: column; width: 20%">
-            <div id="side0" style="
-                display: flex;
-                box-sizing: border-box;
-                flex-direction: column;
-                height: 20vh;
-                margin: 2px;
-            ">
-                <h3 style="margin: 5px; padding-left: 10px">Weather</h3>
-                <div style="padding-left: 10px">
-                    <form action="">
-                        <input type="search" id="search" style="border-radius: 50px" />
-                    </form>
-                </div>
-                <!-- <div style="display: flex;">
-                    <img style="margin: 5px;" src="/img/dn.png" width="20%" alt="">
-                    <h4>32 </h4>
-                    <h4 style="padding-left: 3PX;">clear</h4>
-                </div>      -->
-            </div>
             <div id="side" style="
-                display: flex;
-                box-sizing: border-box;
-                flex-direction: column;
-                height: 60vh;
-            ">
+            display: flex;
+            box-sizing: border-box;
+            flex-direction: column;
+            height: 70vh;
+          ">
                 <h3 style="padding-left: 20px; margin-bottom: 0px">NEWS</h3>
                 <div id="news" style="
-                padding: 15px;
-                height: 80%;
-                overflow-y: auto;
-                scrollbar-width: thin;
-                scrollbar-color: #888 #f1f1f1;
-                ">
+              padding: 15px;
+              height: 80%;
+              overflow-y: auto;
+              scrollbar-width: thin;
+              scrollbar-color: #888 #f1f1f1;
+            ">
                     <ul>
                         <li>
                             <p>There was a flood in Haridwar recently</p>
@@ -119,61 +100,40 @@
                     </ul>
                 </div>
             </div>
-            <script src="/weather_api.js"></script>
+
 
         </div>
 
         <div id="main" style="
-            display: flex;
-            width: 80%;
-            padding: 15px;
-            justify-content: space-evenly;
-            ">
+          display: flex;
+          width: 80%;
+          padding: 15px;
+          justify-content: space-evenly;
+        ">
 
-            <div class="box" style="width: 20%">
-                <h3 style="text-align: center">Precautions</h3>
-                <img src="/img/preca.png" width="55%" alt="" />
+            <div class="box" style="width: 30%">
+                <h3 style="text-align: center">To search missing people</h3>
+                <img src="/img/searchmissing.jpeg" width="50%" alt="" />
                 <p>
-                    With proper knowledge and practice you can not only save your life but also others
+                    Here is the list of people who have been reported
                 </p>
-                <p>To know more click the button</p>
-                <form action="/howtorecover.html">
+                <p>To see the list click the button</p>
+                <form action="/searchmiss.html">
                     <button class="butt">Click to know more</button>
                 </form>
             </div>
-            <div class="box" style="width: 20%">
-                <h3 style="text-align: center">What to do now</h3>
-                <img src="/img/dn.png" width="60%" alt="" />
+            <div class="box" style="width: 30%">
+                <h3 style="text-align: center">To add new people</h3>
+                <img src="/img/add.png" width="50%" alt="" />
                 <p>
-                    If you are currently stuck in a calamity you can still do things to get out
+                    If you want to add a missing person detail
                 </p>
-                <p>To know more click the button</p>
-                <form action="/whattodonow.html">
+                <p>To add the detail click the button</p>
+                <form action="/add.html">
                     <button class="butt">Click to know more</button>
                 </form>
             </div>
-            <div class="box" style="width: 20%">
-                <h3 style="text-align: center">Missing People </h3>
-                <img src="/img/rec.png" width="60%" alt="" />
-                <p>
-                    If you are searching for someone who is missing
-                </p>
-                <p>To add and see new people</p>
-                <form action="/missing.html">
-                    <button class="butt">Click to know more</button>
-                </form>
-            </div>
-            <div class="box" style="width: 20%">
-                <h3 style="text-align: center">Tender</h3>
-                <img src="/img/don.png" width="60%" alt="" />
-                <p>
-                    To help people who are suffering from disaster you can take a tender
-                </p>
-                <p>To help people, click the button</p>
-                <form action="/form.html">
-                    <button class="butt">Click to Apply</button>
-                </form>
-            </div>
+
         </div>
     </div>
     <!-- <hr style="margin: 2px;"> -->
