--- a/whattodonow.html
+++ b/whattodonow.html
@@ -56,39 +56,20 @@
 
     <div style="display: flex; flex: 1; flex-direction: row; margin-top: 0px">
         <div id="sidemain" style="display: flex; flex-direction: column; width: 20%">
-            <div id="side0" style="
-                display: flex;
-                box-sizing: border-box;
-                flex-direction: column;
-                height: 20vh;
-                margin: 2px;
-            ">
-                <h3 style="margin: 5px; padding-left: 10px">Weather</h3>
-                <div style="padding-left: 10px">
-                    <form action="">
-                        <input type="search" id="search" style="border-radius: 50px" />
-                    </form>
-                </div>
-                <!-- <div style="display: flex;">
-                    <img style="margin: 5px;" src="/img/dn.png" width="20%" alt="">
-                    <h4>32 </h4>
-                    <h4 style="padding-left: 3PX;">clear</h4>
-                </div>      -->
-            </div>
             <div id="side" style="
-                display: flex;
-                box-sizing: border-box;
-                flex-direction: column;
-                height: 60vh;
-            ">
+            display: flex;
+            box-sizing: border-box;
+            flex-direction: column;
+            height: 60vh;
+          ">
                 <h3 style="padding-left: 20px; margin-bottom: 0px">NEWS</h3>
                 <div id="news" style="
-                padding: 15px;
-                height: 80%;
-                overflow-y: auto;
-                scrollbar-width: thin;
-                scrollbar-color: #888 #f1f1f1;
-                ">
+              padding: 15px;
+              height: 80%;
+              overflow-y: auto;
+              scrollbar-width: thin;
+              scrollbar-color: #888 #f1f1f1;
+            ">
                     <ul>
                         <li>
                             <p>There was a flood in Haridwar recently</p>
@@ -124,54 +105,54 @@
         </div>
 
         <div id="main" style="
-            display: flex;
-            width: 80%;
-            padding: 15px;
-            justify-content: space-evenly;
-            ">
+          display: flex;
+          width: 80%;
+          padding: 15px;
+          justify-content: space-evenly;
+        ">
 
             <div class="box" style="width: 20%">
-                <h3 style="text-align: center">Precautions</h3>
-                <img src="/img/preca.png" width="55%" alt="" />
+                <h3 style="text-align: center">Search Relief Camps</h3>
+                <img src="/img/reliefe.png" width="60%" alt="" />
                 <p>
-                    With proper knowledge and practice you can not only save your life but also others
+                    Relief camps are being setup to help the people
                 </p>
                 <p>To know more click the button</p>
-                <form action="/howtorecover.html">
+                <form action="https://pathanamthitta.nic.in/en/relief-camps/">
                     <button class="butt">Click to know more</button>
                 </form>
             </div>
             <div class="box" style="width: 20%">
-                <h3 style="text-align: center">What to do now</h3>
-                <img src="/img/dn.png" width="60%" alt="" />
+                <h3 style="text-align: center">Search Hospital</h3>
+                <img src="/img/hospital.png" width="60%" alt="" />
                 <p>
-                    If you are currently stuck in a calamity you can still do things to get out
+                    If you want to get first aid from the hospital
                 </p>
                 <p>To know more click the button</p>
-                <form action="/whattodonow.html">
+                <form action="https://www.justdial.com/Delhi/Hospitals-in-Ghaziabad-City/nct-10253670">
                     <button class="butt">Click to know more</button>
                 </form>
             </div>
             <div class="box" style="width: 20%">
-                <h3 style="text-align: center">Missing People </h3>
-                <img src="/img/rec.png" width="60%" alt="" />
+                <h3 style="text-align: center">Search Police Station </h3>
+                <img src="/img/police.png" width="60%" alt="" />
                 <p>
-                    If you are searching for someone who is missing
+                    If you want to report FIR for any mishappening
                 </p>
-                <p>To add and see new people</p>
-                <form action="/missing.html">
+                <p>To know more click the button</p>
+                <form action="https://delhipolice.gov.in/">
                     <button class="butt">Click to know more</button>
                 </form>
             </div>
             <div class="box" style="width: 20%">
-                <h3 style="text-align: center">Tender</h3>
-                <img src="/img/don.png" width="60%" alt="" />
+                <h3 style="text-align: center">Search Fire Station</h3>
+                <img src="/img/fire.png" width="60%" alt="" />
                 <p>
-                    To help people who are suffering from disaster you can take a tender
+                    To get help from fire fighting department
                 </p>
-                <p>To help people, click the button</p>
-                <form action="/form.html">
-                    <button class="butt">Click to Apply</button>
+                <p>To know more click the button</p>
+                <form action="https://upfireservice.gov.in/upfire/firestationlist">
+                    <button class="butt">Click to know more</button>
                 </form>
             </div>
         </div>
